--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/andrepolischuk/keep.git"
+    "url": "git+https://https://github.com/simtoolkitpro/keep"
   },
   "keywords": [
     "electron-app",
