--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 os: osx
-osx_image: xcode9.1
-language: node_js
-node_js:
-  - 8
+  osx_image: xcode10.2
+  language: node_js
+  node_js: "12"
 script:
 - npm run lint
 - npm run dist
