--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
-os: osx
-  osx_image: xcode10.2
-  language: node_js
-  node_js: "12"
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode10.2
+      language: node_js
+      node_js: "12"
 script:
 - npm run lint
 - npm run dist
