--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ branches:
 deploy:
       provider: releases
       api_key: $GITHUB_OAUTH_TOKEN
-      skip_cleanup: true
+      cleanup: true
       on:
-        tags: true
+        tags: false
