--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,31 @@ matrix:
       osx_image: xcode10.2
       language: node_js
       node_js: "12"
+
+    - os: windows
+      language: node_js
+      node_js: "12"
+      env:
+        - YARN_GPG=no
+
+    - os: linux
+      services: docker
+      language: generic
 script:
-- npm run dist:mac
-branches:
-  except:
-    - "/^v\\d+\\.\\d+\\.\\d+$/"
+  - |
+    if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+      docker run --rm \
+        --env-file <(env | grep -vE '\r|\n' | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
+        -v $PWD:/project \
+        -v ~/.cache/electron:/root/.cache/electron \
+        -v ~/.cache/electron-builder:/root/.cache/electron-builder \
+        electronuserland/builder:wine-mono \
+        /bin/bash -c "npm run dist:linux"
+    elif [ "$TRAVIS_OS_NAME" == "windows" ]; then
+      npm run dist:win;
+    else
+      npm run dist:mac;
+    fi
 deploy:
   provider: releases
   api_key: $GITHUB_OAUTH_TOKEN
@@ -16,4 +36,4 @@ deploy:
   file: dist/*
   skip_cleanup: true
   on:
-    tags: false
+    tags: true
